force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/JBCXM__AutomatedAlertRules__c.object-meta.xml
<CustomObject>
    <description>This is used to store Automated alert rules.</description>
    <label>Automated Alert Rules</label>
    <nameField>
        <label>RelatedId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automated Alert Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>