force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__AlertCriteria__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__AlertCriteria__c</fullName>
    <description>This is used to store the parameters to create an alert.</description>
    <label>AlertCriteria</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>