force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__Description__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Description__c</fullName>
    <description>This is deprecated. Please do not use this field to store rule description.</description>
    <label>Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>