force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__EntityType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__EntityType__c</fullName>
    <defaultValue>&quot;ACCOUNT&quot;</defaultValue>
    <description>This field stores if the rule is for Account or Relationship. Default value is Account</description>
    <label>Entity Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>