force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__externalId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__externalId__c</fullName>
    <externalId>true</externalId>
    <label>externalId</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>