force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__LastRuleUpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LastRuleUpdatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the user who has last updated the rule from UI</description>
    <label>Last Rule Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastRuleUpdatedBy</relationshipName>
    <type>Lookup</type>
</CustomField>