force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__LastRuleUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LastRuleUpdatedDate__c</fullName>
    <description>This field stores the last time rule is updated from UI</description>
    <label>Last Rule Updated Date</label>
    <type>DateTime</type>
</CustomField>