force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__LastRunDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LastRunDate__c</fullName>
    <description>The last run date-time of the rule.</description>
    <label>LastRunDate</label>
    <type>DateTime</type>
</CustomField>