force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__LastRunResult__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LastRunResult__c</fullName>
    <label>LastRunResult</label>
    <length>250</length>
    <type>Text</type>
</CustomField>