force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__lastSuccessMillis__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__lastSuccessMillis__c</fullName>
    <label>lastSuccessMillis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>