force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__NextScheduledRun__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NextScheduledRun__c</fullName>
    <description>The next scheduled run date-time of the rule.</description>
    <label>NextScheduledRun</label>
    <type>DateTime</type>
</CustomField>