force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__PlayBookIds__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PlayBookIds__c</fullName>
    <label>PlaybookIds</label>
    <length>250</length>
    <type>Text</type>
</CustomField>