force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RelationshipType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the relationship type if rule is for Relationship</description>
    <label>Relationship Type</label>
    <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
    <relationshipLabel>GS Relationship Rules</relationshipLabel>
    <relationshipName>GSRelationshipRules</relationshipName>
    <type>Lookup</type>
</CustomField>