force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__RuleDescription__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RuleDescription__c</fullName>
    <description>Rule description is stored here.</description>
    <label>Rule Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>