force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__RuleFlowInfo__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RuleFlowInfo__c</fullName>
    <label>Rule Workflow Information</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>