force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__ScorecardCriteria__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ScorecardCriteria__c</fullName>
    <label>ScorecardCriteria</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>