force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__ScoreCardMetric__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ScoreCardMetric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scorecard Metric</label>
    <referenceTo>JBCXM__ScorecardMetric__c</referenceTo>
    <relationshipLabel>Automated Alert Rules</relationshipLabel>
    <relationshipName>Automated_Alert_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>