force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__SelectFields__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SelectFields__c</fullName>
    <label>Select Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>