force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__Status__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It specifies the rule is active or not</description>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>