force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__TaskDefaultOwner__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TaskDefaultOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TaskDefaultOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Automated_Alert_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>