force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__TaskOwnerField__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TaskOwnerField__c</fullName>
    <label>TaskOwnerField</label>
    <length>80</length>
    <type>Text</type>
</CustomField>