force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__TriggerCriteria__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TriggerCriteria__c</fullName>
    <description>This is used to store the Trigger criteria(Collection of rules) to create an alert.</description>
    <label>TriggerCriteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>