force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/fields/JBCXM__TriggeredUsageOn__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TriggeredUsageOn__c</fullName>
    <description>This is used to identify whether to evaluate an alert rule by Instance level, Account Level or Both in case of rule on usage(Adoption).</description>
    <label>Trigger Rule By Usage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>