force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>NAME</columns>
    <columns>JBCXM__AlertCount__c</columns>
    <columns>JBCXM__AlertCriteria__c</columns>
    <columns>JBCXM__SourceType__c</columns>
    <columns>JBCXM__Status__c</columns>
    <columns>JBCXM__TriggerCriteria__c</columns>
    <columns>JBCXM__AdvanceCriteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>