force-app/main/default/objects/JBCXM__AutomatedAlertRules__c/listViews/JBCXM__All1.listView-meta.xml
<ListView>
    <fullName>JBCXM__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>